# agent-mono

./: .env.example  .gitignore  AGENTS.md  README.md  budget.yaml  constant.py  package-lock.json  package.json  policies.json  process_tool_docs.py  pyproject.toml  tool_docs.csv  tsconfig.json
.github/: CODEOWNERS
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  smoke.yml
apps/autoagent-core/: .env.template  Dockerfile  README.md  constant.py  pyproject.toml  setup.cfg
autoagent/: cli.py  core.py
autoagent/cli_utils/: file_select.py
autoagent/environment/: mdconvert.py
core/: agentControl.py  budget.py  instrumentation.py  leasing.py  loader.py  schema.py  trace_context.py  usage_db.py
core/knowledge/: search.py
core/llm/: __init__.py  providers.py
core/memory/: db.py
core/observability/: insights.py  metrics.py  trace.py
core/planning/: advanced.py  (+1 more)
data/: agent_memory.sqlite  tools_manifest.json
docker/: docker-compose.yml  gen-env.sh  prometheus.yml
docs/: README-tool-registry-policy.md  project-scope.md  quickstart.md  sidebars.ts
evaluation/: types.py  utils.py
plugins/: __init__.py  agent_suggest.py  csv_parse.py  image_info.py  introspect.py  json_parse.py  pdf_text.py  web_fetch.py
src/: Agent.ts  ContainerManager.ts  Planner.ts  ResponseGenerator.ts  index.ts  security.ts
tools/: __init__.py  agent_cli.py  agent_extensions.py  agent_plugin_cli.py  agent_plugin_cli_legacy.py  async_echo.py  capability_import.py  compare.py  http_request.py  optimize.py  search.py  tool_selector.py  transform_map.py
(+146 files in other folders)
